# layercake

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yml  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  appveyor.yml  build.go  build_stream.go  builder.go  config.go  config_test.go  context.go  docker.go  docker_test.go  error.go  flag.go  flag_test.go  go.mod  go.sum  install.sh  layercake.yml  logger.go  main.go  main_test.go  string_set.go  string_set_test.go  tar.go  tar_test.go  util.go  util_test.go
.circleci/: config.yml
cmd/layercake/: build.go  main.go  wire.go  wire_gen.go
examples/: layercake.yml
examples/hello_world/: layercake.yml
examples/vips/: layercake.yml
hack/: update-codegen.sh
pkg/config/: build.go  config.go
pkg/docker/: client.go
pkg/log/: context.go  logger.go
src/: build.rs  config.rs  lib.rs  main.rs
