[package]
name = "layercake"
version = "0.1.0"
authors = ["Tommy Chen <tommy351@gmail.com>"]

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
serde_yaml = "0.8.6"
serde_json = "1.0.32"
failure = "0.1.3"
tar = "0.4.17"
tempfile = "3.0.4"
log = "0.4.6"
simplelog = "0.5.0"
structopt = "0.2.13"
